Ajustements css (notamment h2) + modification stop_point visite virtuelle

--- a/wp-content/addons/visite_virtuelle/index.html
+++ b/wp-content/addons/visite_virtuelle/index.html
@@ -28,16 +28,16 @@ function initStopPoint(){
 	stop_point.push({time: 120, desc:'Fresque #8', link:'#', played:false});
 	stop_point.push({time: 147, desc:'Fresque #9', link:'#', played:false});
 	stop_point.push({time: 158, desc:'Fresque #10', link:'#', played:false});
-	stop_point.push({time: 176, desc:'Fresque #11', link:'#', played:false});
-	stop_point.push({time: 186, desc:'Fresque #12', link:'#', played:false});
-	stop_point.push({time: 201, desc:'Fresque #13', link:'#', played:false});
-	stop_point.push({time: 215, desc:'Fresque #14', link:'#', played:false});
-	stop_point.push({time: 224, desc:'Fresque #15', link:'#', played:false});
-	stop_point.push({time: 251, desc:'Fresque #16', link:'#', played:false});
-	stop_point.push({time: 260, desc:'Fresque #17', link:'#', played:false});
-	stop_point.push({time: 270, desc:'Fresque #18', link:'#', played:false});
-	stop_point.push({time: 296, desc:'Fresque #19', link:'#', played:false});
-	stop_point.push({time: 312, desc:'Fresque #20', link:'#', played:false});
+	//stop_point.push({time: 176, desc:'Fresque #11', link:'#', played:false});
+	stop_point.push({time: 186, desc:'Fresque #11', link:'#', played:false});
+	stop_point.push({time: 201, desc:'Fresque #12', link:'#', played:false});
+	stop_point.push({time: 215, desc:'Fresque #13', link:'#', played:false});
+	stop_point.push({time: 224, desc:'Fresque #14', link:'#', played:false});
+	stop_point.push({time: 251, desc:'Fresque #15', link:'#', played:false});
+	stop_point.push({time: 260, desc:'Fresque #16', link:'#', played:false});
+	stop_point.push({time: 270, desc:'Fresque #17', link:'#', played:false});
+	stop_point.push({time: 296, desc:'Fresque #18', link:'#', played:false});
+	stop_point.push({time: 312, desc:'Fresque #19', link:'#', played:false});
 
 	point = 1;
 }
@@ -63,6 +63,6 @@ function initStopPoint(){
 	<div id="fix"></div>
 </div>
 <div class="credit">Musique : "Allemande" - Wahneta Meixsell</div>
-<!-- <a href="#" class="skip">Skip</a> -->
+<!-- <a href="#" class="skip" data-point="10">Skip</a> -->
 </body>
 </html>
