--- a/wp-content/addons/visite_virtuelle/index.html
+++ b/wp-content/addons/visite_virtuelle/index.html
@@ -4,8 +4,14 @@
 <title>Visite virtuelle interactive</title>
 <link rel="stylesheet" href="style.css" type="text/css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.15.1/TweenMax.min.js"></script> -->
-<script src="visite_interactive.js"></script>
+<script type="text/javascript">
+if (navigator.userAgent.indexOf('Safari') != -1 && navigator.userAgent.indexOf('Chrome') == -1) {
+	$.getScript('visite_interactive-safari.js');
+}
+else{
+	$.getScript('visite_interactive.js');
+}
+</script>
 <script type="text/javascript">
 var images = new Array(
 					"img/arrows.png",
